# silo

./: Cargo.toml  README.md  build.rs
docs/: design.md
patches/gpui/: Cargo.toml
patches/zed-font-kit/: Cargo.toml
silo/: Cargo.toml  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  tailwind.config.js
silo/src/: App.css  App.tsx  main.rs
silo/src-tauri/: Cargo.toml  tauri.conf.json
silo/src-tauri/src/: lib.rs
silo/src-tauri/src/agent/: executor.rs  mod.rs  utils.rs
silo/src-tauri/src/engine/: backend.rs  manager.rs  mod.rs
silo/src-tauri/src/sandbox/: executor.rs  mod.rs
silo/src-tauri/src/swarm/: discovery.rs  mod.rs  node.rs
silo/src-tauri/src/vault/: chunker.rs  database.rs  mod.rs
silo/src/engine/: manager.rs  mod.rs
silo/src/sandbox/: mod.rs
silo/src/swarm/: mod.rs
silo/src/vault/: database.rs  sync.rs
src/: main.rs
src/engine/: backend.rs
src/sandbox/: executor.rs
src/swarm/: node.rs
src/ui/: mod.rs  text_input.rs
