[package]
name = "silo"
version = "0.1.0"
description = "Silo AI - Privacy-first local Agent OS"
authors = ["Silo Team"]
edition = "2024"

[lib]
name = "silo_lib"
crate-type = ["rlib"]

[dependencies]
# GPUI - GPU 加速原生 UI
gpui = "0.2.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System info
sysinfo = "0.30"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Text processing
regex = "1"
unicode-segmentation = "1"

# Fix: core-graphics 0.24/0.25 版本冲突 (zed-font-kit, gpui, core-text)
[patch.crates-io]
zed-font-kit = { path = "patches/zed-font-kit" }
gpui = { path = "patches/gpui" }

