[package]
name = "silo"
version = "0.1.0"
description = "Silo AI - Privacy-first local Agent OS"
authors = ["Silo Team"]
edition = "2021"

[lib]
name = "silo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Vector database
lancedb = "0.7"

# P2P networking
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux"] }

# System info
sysinfo = "0.31"

# WebAssembly runtime (sandbox)
wasmtime = "22"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

